tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_enums_match_integer_type_mismatch_in_pattern/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Expected type Field, found type Foo
  ┌─ src/main.nr:4:17
  │
4 │                 Foo::One(_) => (),
  │                 --------
  │

Aborting due to 1 previous error
